[package]
name = "typst-playpen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
codespan-reporting = "0.11.1"
comemo = "0.2.0"
dirs = "5.0.0"
elsa = "1.8.0"
memmap2 = "0.5.10"
notify = "5.1.0"
once_cell = "1.17.1"
same-file = "1.0.6"
siphasher = "0.3.10"
typst = { git = "https://github.com/typst/typst", rev = "9414d5" }
typst-library = { git = "https://github.com/typst/typst", rev = "9414d5" }
walkdir = "2.3.3"
eframe = "0.21.3"
