[package]
name = "typst-playpen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"



[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
chrono = "0.4.24"
codespan-reporting = "0.11.1"
comemo = "0.5.0"
dirs = "5.0.0"
elsa = "1.8.0"
memmap2 = "0.5.10"
notify = "5.1.0"
once_cell = "1.17.1"
same-file = "1.0.6"
siphasher = "0.3.10"
typst = "0.14.0"
# typst = { path = "../typst" }
typst-library = "0.14.0"
typst-layout = "0.14.0"
typst-html = "0.14.0"
typst-pdf = "0.14.0"
typst-svg = "0.14.0"
typst-render = "0.14.0"
typst-eval = "0.14.0"
typst-syntax = "0.14.0"
typst-realize = "0.14.0"
typst-timing = "0.14.0"
typst-kit = { version = "0.14.0", features = ["embed-fonts"] }
typst-utils = "0.14.0"
# typst-library = { path = "../typst/library" }

#eframe = "0.21.3"
#eframe = { path = "../egui-src/crates/eframe" }
# wasm-bindgen-futures = "0.4"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
base64-url = "2.0.0"
rusttype = "0.9.3"
ttf-parser = "0.25.0"
eframe = "0.33.0"

ecow = "0.2.6"
parking_lot = "0.12.5"
rayon = "1.11.0"
rustc-hash = "2.1"


clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"
